# wrench-forum

./: .gitignore  Cargo.toml  README.md
scripts/: seed.sh
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs
src/routes/: admin.rs  auth.rs  bookmarks.rs  forum.rs  home.rs  mod.rs  moderation.rs  notifications.rs  profile.rs  search.rs  stores.rs  uploads.rs  verification.rs
static/: style.css
templates/: admin.html  base.html  bookmarks.html  category.html  edit_post.html  edit_profile.html  error.html  home.html  login.html  mod_queue.html  new_post.html  notifications.html  post.html  profile.html  register.html  search.html  stores.html  verification.html  verification_pending.html
templates/partials/: activity_logs.html  announcement_list.html  ban_list.html  comments.html  profile_comments.html  profile_posts.html  report_queue.html  search_results.html  store_list.html  verification_queue.html
tests/: auth_tests.rs  db_tests.rs  integration_tests.rs
