[package]
name = "wrench-forum"
version = "0.2.0"
edition = "2021"

[lib]
name = "wrench_forum"
path = "src/lib.rs"

[[bin]]
name = "wrench-forum"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tera = "1"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.11"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3"
